worked with eventbrite to create 2 endpoints

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_APP_RAPID_API_TRAVEL_API_KEY='5d1b13838emsh7dc20092a43e100p1da1c7jsnd6057f786dd5'
+VITE_APP_EVENTBRITE_TOKEN='LBFNGCUWYNX2UZUA3YW4'
